--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,11 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = [
+    "setuptools>=61.0",
+    "meson>=0.64",
+    "numpy>=1.22",
+    "scipy>=1.8",
+    "gfortran"
+]
 build-backend = "setuptools.build_meta"
 
 [project]
